# master_nist

./: .gitignore  README.md  _empty.py  build_all.sh  clean_testresults.sh  copy_unfinished_to_majorpc.sh  create_all_helper.sh  install_valgrind.sh  move_to_majorpc.sh  rename_testresult.sh  resume_test_all.sh  resume_test_all_dryrun.sh  resume_test_longrunning.sh  start_daemon.sh  start_daemon_build_all.sh  start_daemon_resume_test_all.sh  start_daemon_test_all.sh  start_daemon_test_longrunning.sh  test_all.sh  test_encrypt.sh  test_longrunning.sh  test_quick.sh  test_sign.sh  test_some.sh  tomas_build_all.sh  update_bash_aliases
BIG_QUAKE-Round1/: build_all.sh  test_all.sh  test_all_longdemo.sh  verify_all.sh
BIKE-Round4/: README.txt  build_all.sh  test_all.sh
CRYSTALS_Dilithium-Round3/: build_all.sh  test_all.sh  test_all2.sh
CRYSTALS_Kyber-Round3/: build_all.sh  compare_build.sh  compare_run.sh  test_all.sh
Classic-McEliece-Round4/: README  build_all.sh  test_all.sh
Ding_LWE_Key_Exchange-Round1/: README  build_all.sh  test_all.sh  verifyTest.sh  verify_all.sh
DualModeMS-Round1/: README
EMBLEM_R_EMBLEM-Round1/: README.txt  build_all.sh  test_all.sh
Falcon-Round3/: build_all.sh  test_all.sh  test_all2.sh
FrodoKEM-Round3/: README  build_all.sh  test_all.sh
Gravity_SPHINCS-Round1/: build_all.sh  build_all2.sh  test_all.sh  (+1 more)
bike-kem/: CMakeLists.txt  README  build_all.sh  test_all.sh
bike-kem/cmake/: arch.cmake  compilation-flags.cmake
bike-kem/include/: api.h
bike-kem/include/internal/: measurements.h
bike-kem/tests/: CMakeLists.txt
(+1243 files in other folders)
