cmake_minimum_required(VERSION 3.13)
project(bike C)

set(INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
set(SRC_DIR ${PROJECT_SOURCE_DIR}/src)
set(TESTS_DIR ${PROJECT_SOURCE_DIR}/tests)

include_directories(${INCLUDE_DIR})
include_directories(${INCLUDE_DIR}/internal)
include_directories(${SRC_DIR}/third_party_src)
include_directories(../_common/NIST)
include_directories(../_common/tomas)

include(cmake/arch.cmake)
include(cmake/compilation-flags.cmake)
include(cmake/clang-format.cmake)

add_library(${PROJECT_NAME} "")
add_executable(PQCgenKAT_kem "")
add_executable(PQCgenKAT_kem_keygen "")
add_executable(PQCgenKAT_kem_dec "")
add_executable(PQCgenKAT_kem_enc "")

add_subdirectory(${SRC_DIR})
add_subdirectory(${TESTS_DIR})

target_link_libraries(PQCgenKAT_kem ${PROJECT_NAME})
target_link_libraries(PQCgenKAT_kem_keygen ${PROJECT_NAME})
target_link_libraries(PQCgenKAT_kem_dec ${PROJECT_NAME})
target_link_libraries(PQCgenKAT_kem_enc ${PROJECT_NAME})

if(LINK_OPENSSL)
  message(STATUS "Linking OpenSSL")
  find_package(OpenSSL REQUIRED)
  set(OPENSSL_USE_STATIC_LIBS TRUE)
  target_link_libraries(PQCgenKAT_kem OpenSSL::Crypto)
  target_link_libraries(PQCgenKAT_kem_keygen OpenSSL::Crypto)
  target_link_libraries(PQCgenKAT_kem_dec OpenSSL::Crypto)
  target_link_libraries(PQCgenKAT_kem_enc OpenSSL::Crypto)
endif()
